# pipewire-py

./: .gitignore  README.md  build.py  build_pipewire.py  build_spa.py  build_spa_plugin.py  make_cdefs.py  pyproject.toml  test_spa_plugin.py  tutorial1.py  tutorial2.py  tutorial3.py  tutorial4.py  tutorial5.py  tutorial6.py
pipewire/: __init__.py
