[tool.poetry]
name = "pipewire"
version = "0.0.1"
description = "Unofficial Python bindings for PipeWire."
authors = ["Quentin Wenger <matpi@protonmail.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pkgconfig = "^1"
setuptools = "^71"
cffi = "^1"
pcpp = "^1"
ply = "^3"
pycparserext = { git = "https://github.com/retif/pycparserext.git", branch = "main", develop = true }
pycparser = "^2"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["pipewire/__init__.py"]

